# django-static-precompiler

./: .codeclimate.yml  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES.md  CHANGES.rst  Dockerfile  Dockerfile-base  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Vagrantfile  circle.yml  circleci.yml  docker-compose.yml  provision.sh  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
docs/: Makefile  compile-filter.rst  compiler-settings.rst  compilestatic-command.rst  conf.py  form-media.rst  general-settings.rst  index.rst  inlinecompile-tag.rst  installation.rst  make.bat  troubleshooting.rst
src/static_precompiler/: caching.py  finders.py  models.py  mtime.py  registry.py  settings.py  types.py  url_converter.py  utils.py  watch.py
src/static_precompiler/compilers/: __init__.py  babel.py  base.py  coffeescript.py  dart_sass.py  handlebars.py  less.py  libsass.py  livescript.py  scss.py  stylus.py
src/static_precompiler/management/commands/: compilestatic.py
src/static_precompiler/migrations/: 0001_initial.py
src/static_precompiler/templatetags/: compile_static.py
static_precompiler/: caching.py  exceptions.py  finders.py  models.py  mtime.py  registry.py  settings.py  url_converter.py  utils.py  watch.py
static_precompiler/compilers/: __init__.py  babel.py  base.py  browserify.py  coffeescript.py  es6.py  es6to5.py  handlebars.py  less.py  libsass.py  livescript.py  scss.py  stylus.py
static_precompiler/management/commands/: compilestatic.py  static_precompiler_watch.py
static_precompiler/migrations/: 0001_initial.py  0002_auto__chg_field_dependency_source__chg_field_dependency_depends_on.py
static_precompiler/south_migrations/: 0001_initial.py  0002_auto__chg_field_dependency_source__chg_field_dependency_depends_on.py
static_precompiler/templatetags/: base.py  coffeescript.py  compile_static.py  es6.py  less.py  sass.py  scss.py
static_precompiler/tests/: __init__.py  conftest.py  django_settings.py  test_babel.py  test_base_compiler.py  test_coffeescript.py  test_es6.py  test_es6to5.py  test_handlebars.py  test_less.py  test_livescript.py  test_management.py  test_registry.py  test_scss.py  test_static_precompiler_watch.py  test_stylus.py  test_templatetags.py  test_url_converter.py  test_utils.py
static_precompiler/tests/static/COMPILED/scripts/: test.js
static_precompiler/tests/static/styles/: test.less  test.sass
static_precompiler/tests/static/styles/less/: test.less
static_precompiler/tests/static/styles/sass/: test-compass-import.scss
static_precompiler/tests/static/styles/stylus/: broken1.styl
static_precompiler/tests/static/styles/stylus/E/: F.styl
static_precompiler/tests/staticfiles_dir/: config.rb  test-compass.scss
test_project/: requirements.txt
test_project/test_project/: settings.py  wsgi.py
tests/: conftest.py  test_babel.py  test_base_compiler.py  test_coffeescript.py  test_handlebars.py  test_less.py  test_livescript.py  test_management.py  test_registry.py  test_scss.py  test_stylus.py  test_templatetags.py  test_url_converter.py  test_utils.py
tests/compilestatic/scss/: test.scss
tests/static/scripts/: broken.es6  broken.handlebars
tests/static/styles/less/: global-vars.less  include-path.less
tests/static/styles/sass/: precision.scss
tests/static/styles/stylus/: A.styl  D.styl  broken2.styl  broken3.styl
tests/static/styles/stylus/B/: C.styl
tests/static/styles/stylus/E/: index.styl
tests/staticfiles_dir/: another_test.coffee  test-compass.scss
tests/staticfiles_dir_with_prefix/: another_test.coffee
