[metadata]
name = django-static-precompiler
version = 2.3
author = Andrey Fedoseev
author_email = andrey@andreyfedoseev.com
description =
    Django template tags to compile all kinds of static files
    (SASS, LESS, Stylus, CoffeeScript, Babel, LiveScript, Handlebars).
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/andreyfedoseev/django-static-precompiler
project_urls =
    Bug Tracker = https://github.com/andreyfedoseev/django-static-precompiler/issues/
    Repository = https://github.com/andreyfedoseev/django-static-precompiler
    Documentation = https://django-static-precompiler.readthedocs.io/
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2
    Framework :: Django :: 3
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
keywords =
    sass
    scss
    less
    stylus
    css
    coffeescript
    javascript
    babel
    livescript
    handlebars


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Django>=2.0
tests_require =
    pytest
    pytest-django
    pretend
    libsass

[options.package_data]
static_precompiler = py.typed

[options.packages.find]
where = src

[options.extras_require]
watch =
    watchdog
libsass =
    libsass

[flake8]
exclude = docs, build, .git, .venv, .tox, static_precompiler/migrations/*
max-line-length = 120
ignore = E203,W503
