[metadata]
name = django-static-precompiler
version = 3.0a1
author = Andrey Fedoseev
author_email = andrey@andreyfedoseev.com
description =
    Django template tags to compile all kinds of static files
    (SASS, LESS, Stylus, CoffeeScript, Babel, LiveScript, Handlebars).
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/andreyfedoseev/django-static-precompiler
project_urls =
    Bug Tracker = https://github.com/andreyfedoseev/django-static-precompiler/issues/
    Repository = https://github.com/andreyfedoseev/django-static-precompiler
    Documentation = https://django-static-precompiler.readthedocs.io/
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
keywords =
    sass
    scss
    less
    stylus
    css
    coffeescript
    javascript
    babel
    livescript
    handlebars


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
tests_require =
    pytest
    pytest-django
    pretend
    libsass

[options.package_data]
static_precompiler = py.typed

[options.packages.find]
where = src

[options.extras_require]
watch =
    watchdog
libsass =
    libsass
